chore: Added spread copy and transform

--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,6 @@
     ["env", {
       "target": ["last 2 versions"]
     }]
-  ]
+  ],
+  "plugins": ["transform-class-properties", "transform-object-rest-spread"]
 }
