--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "axios": "^0.17.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "styled-components": "^2.4.0"
   }
 }
