--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "dev": "webpack-dev-server",
-    "format": "prettier --write --single-quote \"src/**/*.{js,jsx}\""
+    "format": "prettier --write --single-quote \"src/**/*.{js,jsx}\"",
+    "flow": "flow"
   },
   "repository": {
     "type": "git",
@@ -25,8 +26,10 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.8",
+    "flow-bin": "^0.63.1",
     "prettier": "^1.9.2",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
