--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
     "axios": "^0.17.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-saga": "^0.2.6",
     "react-transition-group": "^2.2.1",
+    "redux": "^3.7.2",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.77.2",
     "styled-components": "^2.4.0"
