--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "webpack",
     "dev": "webpack-dev-server",
     "format": "prettier --write --single-quote \"src/**/*.{js,jsx}\"",
@@ -23,15 +23,27 @@
   "homepage": "https://github.com/Sanish-P/react-chat-app#readme",
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-jest": "^22.2.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.8",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.1",
+    "file-loader": "^1.1.6",
     "flow-bin": "^0.63.1",
+    "html-webpack-plugin": "^2.30.1",
+    "jest": "^22.2.1",
     "prettier": "^1.9.2",
+    "react-test-renderer": "^16.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0",
+    "regenerator-runtime": "^0.11.1",
     "style-loader": "^0.19.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7"
@@ -42,7 +54,6 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-saga": "^0.2.6",
     "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "semantic-ui-css": "^2.2.12",
