--- a/react-chat-node/package.json
+++ b/react-chat-node/package.json
@@ -14,5 +14,8 @@
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
     "redis": "^2.8.0"
+  },
+  "devDependencies": {
+    "morgan": "^1.9.0"
   }
 }
